# nexios

./: .gitignore  CHANGELOG.md  CHANGELOG.mdcls  CONTRIBUTING.md  README.md  SECURITY.md  example.db  nexios.db  pnpm-lock.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.MD  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  format-code.yml  release.yml  run-tests.yaml  run-tox.yaml  type-check.yaml
docs/: concepts.md  index.md  package.json  pnpm-lock.yaml  team.md
docs/.vitepress/: config.mjs  config.ts
docs/api-reference/: channelbox.md  middleware.md  nexios-app.md  openapi-builder.md  request.md  testclient.md  websocket.md
docs/community/: faq.md  installation.md
docs/docs/: api-examples.md  changelog.md  concepts.md  index.md  summary.md
docs/guide/: authentication.md  cors.md  error-handling.md  events.md  file-upload.md  handlers.md  pydantic-integration.md  request-inputs.md  routers-and-subapps.md  routing.md  sessions.md  static-files.md  why-nexios.md
docs/intro/: asgi.md  concepts.md  migrating-to-nexios.md  nexios-and-fastapi.md  quick-start.md
docs/orm/: index.md
docs/v3/: api-examples.md  concepts.md  index.md  team.md
examples/: README.md  auth_router.py  custom_history_manager.py  enhanced_api_demo.py  file_upload.py  simple_app.py  streaming_middleware.py
examples/auth/: 03_custom_backend.py  04_multiple_backends.py  example_001.py  example_002.py  example_003.py  example_004.py
examples/database/: 01_sqlite_todo.py  example_001.py  example_002.py  example_003.py
examples/exception_handling/: 01_basic.py  02_custom.py  example_001.py  example_002.py
examples/file_handling/: 01_upload_download.py
examples/getting_started/: 02_basic_rest.py  03_enhanced_api.py  04_lifespan.py  README.md
examples/middleware/: 01_basic.py  02_class_based.py  03_asgi_middleware.py
examples/request_inputs/: 02_form_data.py  03_raw_body.py  04_streaming.py  example_001.py
examples/responses/: 01_return_values.py  02_json_with_headers.py  03_response_types.py  04_response_classes.py
examples/routing/: 02_path_parameters.py  03_routes_class.py  04_routers.py  example_001.py
examples/templating/: 01_basic.py  02_inheritance.py  03_custom_filters.py  README.md
examples/validation/: 01_advanced.py  02_pydantic.py
examples/websockets/: 01_basic_echo.py  02_chat_rooms.py  03_custom_history.py
nexios/: __init__.py  __main__.py  application.py  converters.py  decorator_helper.py  dependencies.py  events.py  exception_handler.py  logging.py  pagination.py  parameters.py  static.py  structs.py  types.py  views.py
nexios/_internals/: _formparsers.py  _middleware.py  _response_transformer.py  _route_builder.py
nexios/auth/: __init__.py  base.py  decorator.py  exceptions.py  middleware.py  model.py
nexios/cli/: utils.py
nexios/config/: __init__.py  base.py  cors.py  openapi.py  session.py
nexios/events/: __init__.py  benchmark.py  core.py  emitter.py  enums.py  exceptions.py  mixins.py  types.py
nexios/handlers/: not_found.py
nexios/http/: request.py  response.py
nexios/middleware/: base.py  cors.py  csrf.py  gzip.py  security.py  utils.py
nexios/objects/: __init__.py  common.py  datastructures.py  http.py  routing.py
nexios/openapi/: __init__.py  _builder.py  config.py  models.py  utils.py
nexios/orm/: __init__.py  _config.py  _model.py  config.py  connection.py  descriptors.py  engine.py  field.py  fields.py  manager.py  migration.py  model.py  nexios.db  pytest.ini  query.py  relationship.py  relationships.py  sessions.py  transaction.py  utils.py
nexios/routing/: __init__.py  _utils.py  base.py  grouping.py  http.py  router.py  websocket.py
nexios/session/: __init__.py  base.py  file.py  middleware.py  signed_cookies.py
nexios/templating/: __init__.py  middleware.py
nexios/testclient/: __init__.py  async_client.py  base.py  (+2 more)
old_tests/: test_auth.py  test_exception_handlers.py  test_request_objects.py  test_session.py  test_static.py
tests/: conftest.py  test_concurrency.py  test_converters.py  test_csrf.py  test_dependency_injection.py  test_form_parser.py  test_openapi.py  test_static.py  test_templating.py  test_uploaded_file_save.py  test_views.py
(+403 files in other folders)
